[tool.poetry]
name = "face-unlocker"
version = "0.0.1"
description = "Face ID Authentication for company"
authors = ["beethogedeon <beethogedeon@gmail.com>"]
homepage = "https://github.com/beethogedeon/face-unlocker"
repository = "https://github.com/beethogedeon/face-unlocker"
documentation = "https://github.com/beethogedeon/face-unlocker"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.12"
tensorflow = "^2.12.0"
numpy = "^1.24.3"
opencv-python = "^4.8.0"
image = "^1.5.33"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
